# BioGate-AI

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260429_0001_initial_schema.py  20260429_0002_enterprise_identity_security.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  realtime.py
backend/app/api/v1/: auth.py  biometric.py  dashboard.py  logs.py  reports.py
backend/app/core/: config.py  logging.py  observability.py  security.py
backend/app/domain/: __init__.py  decision.py
backend/app/infrastructure/: database.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: auth.py  biometric.py  dashboard.py  logs.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  biometric_service.py  dashboard_service.py  decision_service.py  device_service.py  log_service.py  rate_limit_service.py  report_service.py  risk_service.py  session_service.py
backend/tests/: conftest.py  test_auth.py  test_biometric.py  test_dashboard.py  test_enterprise_security.py  test_logs_reports.py  test_observability.py  test_realtime.py
docs/: api.md  architecture.md  biometric-policy.md  cla.md  deployment.md  lgpd.md  privacy-policy.md  security.md  terms-of-service.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/attempts/[id]/: page.tsx
frontend/app/check-in/: page.tsx
frontend/app/dashboard/: loading.tsx  page.tsx
frontend/app/devices/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/app/security-logs/: page.tsx
frontend/app/sessions/: page.tsx
frontend/components/: line-chart.tsx  metric-card.tsx  mission-shell.tsx  risk-bars.tsx  status-badge.tsx
frontend/lib/: api.ts  auth.ts  format.ts  types.ts
