[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biogate-ai-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for BioGate AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "passlib[argon2]>=1.7,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "PyJWT>=2.9,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
