[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biogate-ai-backend"
version = "0.1.0"
description = "FastAPI backend scaffold for BioGate AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2.0",
  "email-validator>=2.2,<3.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.28,<1.0",
  "passlib[argon2]>=1.7,<2.0",
  "prometheus-client>=0.23,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "PyJWT>=2.9,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "pytest>=8.4,<9.0",
  "reportlab>=4.4,<5.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
